# kon414e_robot_autonomy_final_project

./: .gitignore  README.md
circle_motion/: CMakeLists.txt  package.xml
circle_motion/src/: circle_motion_node.cpp  odom.cpp
scout/scout_description/urdf/: lidar (copy).xacro
scout/scout_gazebo_sim/launch/: scout_earthquake.launch
